# images-shared

./: .gitignore  .lycheeignore  .nojekyll  .pre-commit-config.yaml  .worktreeinclude  CI.md  CI_CROSS_REPO_WORKFLOWS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SOCI_MANUAL_TEST_PLAN.md  architecture.html  architecture.llms.md  configuration.html  configuration.llms.md  cross-repo-workflows.html  go.mod  index.html  index.llms.md  justfile  llms.txt  robots.txt  search.json  sitemap.xml  templating.html  templating.llms.md
image-templater/: README.md  pyproject.toml
image-templater/image_templater/: main.py  templates.py
posit-bakery/: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONFIGURATION.md  Dockerfile  README.md  TEMPLATING.md  entrypoint.sh  great-docs.yml  justfile  pyproject.toml
posit-bakery/.claude/: settings.json
posit-bakery/docs/: .gitignore  _quarto.yml  architecture.qmd  configuration.qmd  cross-repo-workflows.qmd  index.qmd  jinja2.xml  templating.qmd
posit-bakery/docs/plans/: 2026-03-30-plugin-protocol.md
posit-bakery/docs/specs/: 2026-03-30-plugin-protocol-design.md
posit-bakery/docs/superpowers/plans/: 2026-03-31-oras-plugin.md  2026-04-09-wizcli-plugin.md
posit-bakery/docs/superpowers/specs/: 2026-03-31-oras-plugin-design.md  2026-04-09-wizcli-plugin-design.md
posit-bakery/posit_bakery/: __main__.py  bake_tools.py  ci.py  cli.py  const.py  dgoss.py  error.py  log.py  main.py  retry.py  settings.py  templates.py  util.py
posit-bakery/posit_bakery/bake/: dgoss.py  manager.py  plan.py
posit-bakery/posit_bakery/bake/parser/: config.py  filters.py  manifest.py
posit-bakery/posit_bakery/cli/: build.py  ci.py  clean.py  click_app.py  common.py  create.py  get.py  main.py  remove.py  run.py  update.py  version.py
posit-bakery/posit_bakery/config/: __init__.py  build_os.py  changeset.py  config.py  dirdiff.py  image.py  mixins.py  registry.py  repository.py  shared.py  tag.py  validators.py
posit-bakery/posit_bakery/config/dependencies/: __init__.py  _base.py  const.py  dependency.py  positron.py  python.py  quarto.py  r.py  version.py
posit-bakery/posit_bakery/config/image/: __init__.py  build_os.py  build_secret.py  image.py  matrix.py  os_validators.py  parsed_version.py  variant.py  version.py  version_matrix_base.py  version_os.py
posit-bakery/posit_bakery/config/posit_product/: const.py  main.py
posit-bakery/posit_bakery/config/templating/: __init__.py  default.py  filters.py  render.py
posit-bakery/posit_bakery/config/tools/: __init__.py  base.py  goss.py  registry.py
posit-bakery/posit_bakery/image/: __init__.py  bake.py  build.py  image_metadata.py  image_target.py  util.py
posit-bakery/posit_bakery/image/bake/: __init__.py  bake.py
posit-bakery/posit_bakery/image/goss/: __init__.py  dgoss.py  report.py
posit-bakery/posit_bakery/image/oras/: __init__.py  oras.py
posit-bakery/posit_bakery/models/: __init__.py  config.py  generic.py  manifest.py  project.py
posit-bakery/posit_bakery/models/config/: config.py  document.py  registry.py  repository.py
posit-bakery/posit_bakery/models/image/: __init__.py  image.py  images.py  tags.py  variant.py  version.py
posit-bakery/posit_bakery/models/manifest/: __init__.py  build.py  build_os.py  document.py  goss.py  manifest.py  os.py  snyk.py  target.py
posit-bakery/posit_bakery/models/project/: bake.py  image.py  project.py
posit-bakery/posit_bakery/models/toml/: generic.py
posit-bakery/posit_bakery/parallel/: __init__.py  executor.py  retry.py
posit-bakery/posit_bakery/parser/: config.py  filters.py  generic.py  load.py  manifest.py
posit-bakery/posit_bakery/parser/templating/: filters.py  render.py
posit-bakery/posit_bakery/plugins/: __init__.py  protocol.py  registry.py
posit-bakery/posit_bakery/registry_management/: base.py  clean.py
posit-bakery/posit_bakery/registry_management/dockerhub/: __init__.py  api.py  clean.py  readme.py
posit-bakery/posit_bakery/registry_management/ghcr/: __init__.py  api.py  clean.py  models.py
posit-bakery/posit_bakery/services/: __init__.py  registry_container.py
posit-bakery/posit_bakery/templating/: __init__.py  base_templates.py  default.py  filters.py  product_templates.py  render.py
posit-bakery/posit_bakery/templating/templates/: config.toml  config.toml.jinja2  config.yaml.jinja2  configuration.py  containerfile.jinja2  containerfile.py  manifest.toml  manifest.toml.jinja2  manifest.yaml.jinja2
posit-bakery/posit_bakery/web/: resolvers.py  versions.py
posit-bakery/test/: conftest.py  helpers.py  pytest.ini  test_error.py  test_log.py  test_retry.py  test_settings.py  test_util.py
posit-bakery/test/cli/: bakery_command.py  common_steps.py  conftest.py  fixtures.py  test_bake.py  test_bakery.py  test_basic_context.py  test_build.py  test_ci.py  test_ci_matrix_dev_versions.py  test_ci_merge_alias.py  test_ci_publish.py  test_ci_readme_check.py  test_clean.py  test_common.py  test_create.py  test_dev_spec.py  test_dev_stream_deprecated.py  test_get.py  test_new.py  test_remove.py  test_run.py  test_run_dgoss.py  test_update.py
posit-bakery/test/config/: conftest.py  test_build_retry.py  test_changeset.py  test_config.py  test_dependency.py  test_dirdiff.py  test_e2e.py  test_image.py  test_registry.py  test_repository.py  test_tag.py  test_validators.py
posit-bakery/test/features/: new.feature
posit-bakery/test/helpers/: __init__.py  registry_container.py
posit-bakery/test/image/: conftest.py  test_image_dependencies.py  test_image_metadata.py  test_image_target.py  test_util.py
posit-bakery/test/models/: fixtures.py  helpers.py  test_config.py  test_generic.py  test_manifest.py  test_project.py
posit-bakery/test/parallel/: test_executor.py  test_jobs.py  test_retry.py
posit-bakery/test/plugins/: test_registry.py
posit-bakery/test/services/: test_registry_container.py
posit-bakery/test/templating/: test_default.py  test_filters.py
pulumi/github/github-apps/: .gitignore  Pulumi.posit-dev.yaml  Pulumi.rstudio.yaml  Pulumi.yaml  README.md  __main__.py  justfile  pyproject.toml
(+650 files in other folders)
