[tool.poetry]
name = "image-templater"
version = "0.0.1"
description = "A simple template renderer for Posit Images templates"
authors = ["Ian Pittwood <ian.pittwood@posit.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"
jinja2 = "^3.1.4"

[tool.poetry.scripts]
templater = "image_templater.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
