[project]
name = "posit-bakery"
description = "Tools for extracting and manipulating image build artifacts for various commands"
authors = [
    { name = "Ian H. Pittwood", email = "ian.pittwood@posit.co" },
    { name = "Ben Schwedler", email = "ben@posit.co" },
]
maintainers = [
    { name = "Posit Container Team", email = "docker@posit.co" },
]
license = "MIT"
readme = "README.md"

requires-python = "<4,>=3.10"
dependencies = [
    "typer~=0.16.1",
    "jinja2~=3.1.6",
    "rich~=14.1.0",
    "gitpython~=3.1.45",
    "pydantic[email] (>=2.0,<3.0)",
    "python-on-whales (>=0.79.0,<0.80.0)",
    "ruamel-yaml (>=0.18.14,<0.19.0)",
    "requests (>=2.32.5,<3.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "packaging (>=25.0,<26.0)",
    "pygithub (>=2.8.1,<3.0.0)",
]
dynamic = ["version"]

[project.scripts]
bakery = "posit_bakery.cli.main:app"

[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.12.9,<1.0.0"
mypy = "~=1.17.1"
pytest = "~=8.4.1"
pytest-bdd = "~=8.1.0"
pytest-cov = "~=6.2.1"
pytest-mock = "~=3.14.1"
pytest-xdist = "~=3.8.0"

[tool.ruff]
line-length = 120
fix = true
target-version = "py310"

[tool.ruff.lint]
select = [
    "T201",  # https://docs.astral.sh/ruff/rules/print/
]
unfixable = [
    "T201",  # https://docs.astral.sh/ruff/rules/print/
]

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
{% if distance == 0 -%}
{{ serialize_pep440(base, stage, revision) }}
{%- elif revision is not none -%}
{{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
{%- else -%}
{{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
{%- endif %}
"""

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
