[project]
name = "posit-bakery"
description = "CLI for building, testing, and managing multidimensional container images with variant, version, and OS support."
authors = [
    { name = "Ian H. Pittwood", email = "ian.pittwood@posit.co" },
    { name = "Ben Schwedler", email = "ben@posit.co" },
]
maintainers = [
    { name = "Posit Container Team", email = "docker@posit.co" },
]
license = "MIT"
license-files = ["LICENSE.md"]
readme = "README.md"
keywords = ["docker", "container", "image", "build", "bake", "buildx", "posit", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]

requires-python = ">=3.10"
dependencies = [
    "typer~=0.21.1",
    "jinja2~=3.1.6",
    "rich~=14.1.0",
    "gitpython~=3.1.50",
    "pydantic[email]>=2.0,<3.0",
    "python-on-whales>=0.79.0,<0.80.0",
    "ruamel-yaml>=0.18.14,<0.19.0",
    "requests>=2.32.5,<3.0.0",
    "requests-cache>=1.2.1,<2.0.0",
    "packaging>=25.0,<26.0",
    "pygithub>=2.8.1,<3.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://posit-dev.github.io/images-shared/"
Documentation = "https://posit-dev.github.io/images-shared/"
Repository = "https://github.com/posit-dev/images-shared"
Issues = "https://github.com/posit-dev/images-shared/issues"
Changelog = "https://github.com/posit-dev/images-shared/releases"

[project.scripts]
bakery = "posit_bakery.cli.main:app"

[project.entry-points."bakery.plugins"]
dgoss = "posit_bakery.plugins.builtin.dgoss:DGossPlugin"
oras = "posit_bakery.plugins.builtin.oras:OrasPlugin"
hadolint = "posit_bakery.plugins.builtin.hadolint:HadolintPlugin"
wizcli = "posit_bakery.plugins.builtin.wizcli:WizCLIPlugin"
soci = "posit_bakery.plugins.builtin.soci:SociPlugin"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = [
    "posit_bakery/",
    "README.md",
    "LICENSE.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["posit_bakery"]

[tool.ruff]
line-length = 120
fix = true
target-version = "py310"

[tool.ruff.lint]
select = [
    "T201",  # https://docs.astral.sh/ruff/rules/print/
]
unfixable = [
    "T201",  # https://docs.astral.sh/ruff/rules/print/
]

[dependency-groups]
dev = [
    "ruff>=0.12.9,<1.0.0",
    "mypy~=1.17.1",
    "pytest~=9.0.3",
    "pytest-bdd~=8.1.0",
    "pytest-cov~=6.2.1",
    "pytest-mock~=3.14.1",
    "pytest-xdist~=3.8.0",
]
docs = [
    "great-docs>=0.10.0 ; python_version >= '3.11'",
]


[tool.uv-dynamic-versioning]
format-jinja = """
{% if distance == 0 -%}
{{ serialize_pep440(base, stage, revision) }}
{%- elif revision is not none -%}
{{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
{%- else -%}
{{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
{%- endif %}
"""
